# loadavgmonitor

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  argparse.c  argparse.h  main.c  utils.c  utils.h
